PortalPackage/ Enrollment Rx Core/objects/Enrollment_Rx_Required_Document__c.object
<CustomObject>
    <description>A configuration object which controls what document records are created on an enrollment opportunity when the enrollment status enters the &quot;Create Documents At&quot; status specified on Enrollment Rx Configuration. One Admissions Document or Financial Aid Document is created on an Enrollment Opportunity for every active Enrollment Rx Required Document.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, this record will spawn a new Admissions Document or Financial Aid Document on Enrollment Opportunities. If unchecked, it will be ignored.</description>
        <inlineHelpText>If checked, this record will spawn a new Admissions Document or Financial Aid Document on Enrollment Opportunities. If unchecked, it will be ignored.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blocks_Admissions_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Admissions Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Admissions Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocks_Financial_Aid_Status__c</fullName>
        <description>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</description>
        <inlineHelpText>If this document is required to be supplied before the Enrollment Opportunity can enter or pass a certain Financial Aid Status, fill this field out with the Status it should block.</inlineHelpText>
        <label>Blocks Financial Aid Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <description>Determines what type of document will be created on the Enrollment Opportunity.</description>
        <inlineHelpText>Determines what type of document will be created on the Enrollment Opportunity.</inlineHelpText>
        <label>Document Type</label>
        <picklist>
            <picklistValues>
                <fullName>Admissions Document</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Aid Document</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Date_Type__c</fullName>
        <description>Controls how the &quot;Due (Days)&quot; field value is used. Due dates are calculated either as number of days after the document record is created, or number of days before the target school term starts.</description>
        <inlineHelpText>Controls how the &quot;Due (Days)&quot; field value is used. Due dates are calculated either as number of days after the document record is created, or number of days before the target school term starts.</inlineHelpText>
        <label>Due Date Type</label>
        <picklist>
            <picklistValues>
                <fullName>Number of days after creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number of days before school term begins</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Due_Days__c</fullName>
        <defaultValue>30</defaultValue>
        <description>Number of days to use for the initial due date. The &quot;Due Date Type&quot; controls whether this due date is number of days after the document record is created, or number of days before the school term starts.</description>
        <inlineHelpText>Number of days to use for the initial due date. The &quot;Due Date Type&quot; controls whether this due date is number of days after the document record is created, or number of days before the school term starts.</inlineHelpText>
        <label>Due (Days)</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrollment_Rx_Configuration__c</fullName>
        <description>The configuration this document specification belongs to.</description>
        <inlineHelpText>The configuration this document specification belongs to.</inlineHelpText>
        <label>Enrollment Rx Configuration</label>
        <referenceTo>Enrollment_Rx_Configuration__c</referenceTo>
        <relationshipLabel>Enrollment Rx Required Documents</relationshipLabel>
        <relationshipName>Enrollment_Rx_Required_Documents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Enrollment Rx Required Document</label>
    <nameField>
        <label>Enrollment Rx Required Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enrollment Rx Required Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>